--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
 </head>
 
 <body>
-    
+    <header class="showcase">
+        <div class="container">
+            
+            <nav>
+                <h1 class="logo">My Website</h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </nav>
+
+            <div class="showcase-content">
+                <div>
+                    <h1>Make Your Marketing Real</h1>
+                    <p class="my-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis natus explicabo harum rerum at. Delectus optio corrupti non dolore qui?</p>
+                    <a href="" class="btn-primary">Learn More</a>
+                    <a href="" class="btn-secondary">Sign Up</a>
+                </div>
+
+                <img src="./img/conference.png">
+            </div>
+
+        </div>
+    </header>
+
 </body>
 </html>
